Fix squished logo

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
   text-align: center;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 30rem 25rem;
+  background-size: 27rem 25rem;
   width: 45vw;
   height: 90vh;
 }
